update poll details design, my polls design, fix dashboard wrapping issue

--- a/src/app/pages/dashboard/dashboard.component.css
+++ b/src/app/pages/dashboard/dashboard.component.css
@@ -10,7 +10,6 @@
 
 .cards {
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
     width: 99%;
     margin-top: 20px;
@@ -20,9 +19,10 @@
 }
 
 .poll-card {
-    width: 250px;
+    width: 235px;
     height: 130px;
     background-color: lightblue;
+    margin: 10px;
 }
 
 .card-footer {
